--- a/certificate.html
+++ b/certificate.html
@@ -18,20 +18,21 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
-					<a href="home.html" class="header__logo" aria-label="Логотип"></a>
+					<a href="index.html" class="header__logo" aria-label="Логотип"></a>
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
 							<a href="" class="menu__info-link">+7 901 188-81-81</a>
 						</div>
 						<ul class="menu__list">
-							<li class="menu__item"><a href="home.html#expert" class="menu__link">О нас</a></li>
+							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
-							<li class="menu__item"><a href="home.html#visit" class="menu__link">Контакты</a></li>
+							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</nav>
@@ -45,7 +46,8 @@
 
 					<div class="giftcard__card-wrapper">
 						<div class="giftcard__card--main">
-							<img src="img/certificate/giftcard1.webp" loading="eager" alt="Сертификат чехол" class="giftcard__sleeve-img" />
+							<img src="img/certificate/giftcard1.webp" loading="eager" alt="Сертификат чехол"
+								class="giftcard__sleeve-img" />
 						</div>
 						<div class="giftcard__card" id="giftCard">
 							<img src="img/certificate/giftcard2.webp" alt="Сертификат карта" />
@@ -75,7 +77,7 @@
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
-								<a href="home.html#expert" class="footer__menu-link">О нас</a>
+								<a href="index.html#expert" class="footer__menu-link">О нас</a>
 							</li>
 							<li class="footer__menu-item">
 								<a href="hardware.html" class="footer__menu-link">Аппаратная косметология</a>
@@ -93,7 +95,7 @@
 								<a href="certificate.html" class="footer__menu-link">Подарочный сертификат</a>
 							</li>
 							<li class="footer__menu-item">
-								<a data-goto-header data-goto=".visit" href="#" class="footer__menu-link">Контакты</a>
+								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
 
@@ -105,7 +107,8 @@
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
