--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
-					<a href="home.html" class="header__logo" aria-label="Логотип"></a>
+					<a href="index.html" class="header__logo" aria-label="Логотип"></a>
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
@@ -27,7 +27,8 @@
 						<ul class="menu__list">
 							<li class="menu__item"><a data-goto="#expert" href="#" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
@@ -48,7 +49,8 @@
 								<span class="hero__button-text">Записаться на консультацию</span>
 								<span class="hero__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+											stroke-linecap="square" />
 										<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
@@ -66,7 +68,8 @@
 							<h2 class="advantages__title">Авторская косметология в самом сердце Москвы</h2>
 						</div>
 						<div class="advantages__img-block">
-							<img class="advantages__img" src="img/advantages/advantages.webp" alt="Авторская косметология в самом сердце Москвы">
+							<img class="advantages__img" src="img/advantages/advantages.webp"
+								alt="Авторская косметология в самом сердце Москвы">
 						</div>
 						<div class="advantages__text-block">Где здоровье и красота становятся вашими постоянными спутниками</div>
 					</div>
@@ -102,7 +105,8 @@
 								<span class="about__button-text">ПРАЙС-ЛИСТ</span>
 								<span class="about__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="27" height="26" viewBox="0 0 27 26" fill="none">
-										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
+										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417"
+											stroke-linecap="square" />
 										<path d="M3.75 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M23.25 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
@@ -177,7 +181,8 @@
 						</div>
 						<div class="philosophy__text-block">
 							<p class="philosophy__description">
-								Салон Beauty Smas — это сочетание роскоши и профессионального подхода. Косметологический центр класса люкс,
+								Салон Beauty Smas — это сочетание роскоши и профессионального подхода. Косметологический центр класса
+								люкс,
 								эксклюзивные процедуры и самое современное оборудование, расположенные в самом сердце столицы.
 							</p>
 							<ul class="philosophy__features">
@@ -206,7 +211,8 @@
 							<span class="gift__button-text">Купить сертификат</span>
 							<span class="gift__button-img">
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
@@ -247,7 +253,9 @@
 				</div>
 
 				<div class="visit__map">
-					<iframe src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва" width="100%" height="400" frameborder="0" allowfullscreen>
+					<iframe
+						src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва"
+						width="100%" height="400" frameborder="0" allowfullscreen>
 					</iframe>
 				</div>
 			</section>
@@ -293,7 +301,8 @@
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
