--- a/beauty-injections.html
+++ b/beauty-injections.html
@@ -18,20 +18,21 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
-					<a href="home.html" class="header__logo" aria-label="Логотип"></a>
+					<a href="index.html" class="header__logo" aria-label="Логотип"></a>
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
 							<a href="" class="menu__info-link">+7 901 188-81-81</a>
 						</div>
 						<ul class="menu__list">
-							<li class="menu__item"><a href="home.html#expert" class="menu__link">О нас</a></li>
+							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
-							<li class="menu__item"><a href="home.html#visit" class="menu__link">Контакты</a></li>
+							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</nav>
@@ -52,7 +53,8 @@
 							<div class="injection__block injection__block--line">
 								<h2 class="injection__subtitle">Контурная пластика</h2>
 								<p class="injection__text">Контурная пластика — это современная процедура, основанная на использовании
-									инъекций гиалуроновой кислоты, которая обладает уникальными и полезными свойствами. Введение этого вещества
+									инъекций гиалуроновой кислоты, которая обладает уникальными и полезными свойствами. Введение этого
+									вещества
 									под кожу позволяет насытить кожу влагой
 									скорректировать возрастные изменения и придать лицу более четкие очертания.</p>
 							</div>
@@ -60,7 +62,8 @@
 							<div class="injection__block injection__block--line">
 								<h2 class="injection__subtitle">Биоревитализация</h2>
 								<p class="injection__text">Биоревитализация - это инъекционная процедура, предполагающая введение в кожу
-									специальных составов с гиалуроновой кислотой. Она направлена на глубокое увлажнение, повышение эластичности
+									специальных составов с гиалуроновой кислотой. Она направлена на глубокое увлажнение, повышение
+									эластичности
 									и способствует разглаживанию морщин. Курс биоревитализации способствует омоложению кожи, замедлению
 									процессов старения, вызванных воздействием солнечных лучей, и подготовке к другим косметологическим
 									манипуляциям.</p>
@@ -70,14 +73,18 @@
 								<h2 class="injection__subtitle">Плазмотерапия</h2>
 								<p class="injection__text">Плазмотерапия — это инновационный метод омоложения, характеризующийся высокой
 									эффективностью и безопасностью. В ходе процедуры применяется обогащенная тромбоцитами аутоплазма,
-									способствующая улучшению состояния кожи, разглаживанию морщин и профилактике преждевременного старения.</p>
+									способствующая улучшению состояния кожи, разглаживанию морщин и профилактике преждевременного
+									старения.</p>
 							</div>
 
 							<div class="injection__block injection__block--line">
 								<h2 class="injection__subtitle">Мезотерапия</h2>
-								<p class="injection__text">Мезотерапия — это процедура, которая позволяет доставлять питательные вещества в
-									определённых дозировках непосредственно в глубокие слои кожи. Наши специалисты подбирают состав препарата и
-									его дозировку с учетом особенностей каждого нашего пациента, что обеспечивает максимальный эффект после
+								<p class="injection__text">Мезотерапия — это процедура, которая позволяет доставлять питательные
+									вещества в
+									определённых дозировках непосредственно в глубокие слои кожи. Наши специалисты подбирают состав
+									препарата и
+									его дозировку с учетом особенностей каждого нашего пациента, что обеспечивает максимальный эффект
+									после
 									процедуры.</p>
 							</div>
 
@@ -93,15 +100,19 @@
 						<div class="injection__content">
 							<div class="injection__block injection__block--line">
 								<h2 class="injection__subtitle">Ботулинотерапия</h2>
-								<p class="injection__text">Ботулинотерапия – инновационная методика борьбы с возрастными изменениями. В основе
-									метода лежат инъекции ботулотоксина, вызывающие релаксацию мимических мышц и, как следствие, разглаживание
-									морщин. Применимость данной техники широка – от коррекции отдельных зон лица до комплексного омоложения, с
+								<p class="injection__text">Ботулинотерапия – инновационная методика борьбы с возрастными изменениями. В
+									основе
+									метода лежат инъекции ботулотоксина, вызывающие релаксацию мимических мышц и, как следствие,
+									разглаживание
+									морщин. Применимость данной техники широка – от коррекции отдельных зон лица до комплексного
+									омоложения, с
 									сохранением природной мимики и длительным эффектом.</p>
 							</div>
 							<div class="injection__block injection__block--line">
 								<h2 class="injection__subtitle">Коллагеновая терапия</h2>
 								<p class="injection__text">Коллагеновая терапия – представляет собой инъекционную методику основанную на
-									введении препаратов, содержащих коллаген. Данный компонент стимулирует выработку собственного коллагена
+									введении препаратов, содержащих коллаген. Данный компонент стимулирует выработку собственного
+									коллагена
 									кожей, повышая уровень увлажненности, эластичность и уменьшая глубину морщин. Помимо этого, процедура
 									улучшает кровообращение, придавая коже здоровый и свежий вид.</p>
 							</div>
@@ -109,7 +120,8 @@
 							<div class="injection__block">
 								<h2 class="injection__subtitle">Плацентарная терапия</h2>
 								<p class="injection__text">Плацентарная терапия включает использование уникальных препаратов на основе
-									натуральной плаценты. Эти средства обогащены пептидами и аминокислотами, которые способствуют восстановлению
+									натуральной плаценты. Эти средства обогащены пептидами и аминокислотами, которые способствуют
+									восстановлению
 									и обновлению клеток кожи. Введение плацентарных препаратов помогает эффективно бороться с признаками
 									старения, обеспечивая комплексное омолаживающее действие и улучшая общее состояние кожи.</p>
 							</div>
@@ -129,7 +141,7 @@
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
-								<a href="home.html#expert" class="footer__menu-link">О нас</a>
+								<a href="index.html#expert" class="footer__menu-link">О нас</a>
 							</li>
 							<li class="footer__menu-item">
 								<a href="hardware.html" class="footer__menu-link">Аппаратная косметология</a>
@@ -147,7 +159,7 @@
 								<a href="certificate.html" class="footer__menu-link">Подарочный сертификат</a>
 							</li>
 							<li class="footer__menu-item">
-								<a data-goto-header data-goto=".visit" href="#" class="footer__menu-link">Контакты</a>
+								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
 
@@ -159,7 +171,8 @@
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
