--- a/esthetic.html
+++ b/esthetic.html
@@ -18,20 +18,21 @@
 		<header class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
-					<a href="home.html" class="header__logo" aria-label="Логотип"></a>
+					<a href="index.html" class="header__logo" aria-label="Логотип"></a>
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
 							<a href="" class="menu__info-link">+7 901 188-81-81</a>
 						</div>
 						<ul class="menu__list">
-							<li class="menu__item"><a href="home.html#expert" class="menu__link">О нас</a></li>
+							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
-							<li class="menu__item"><a href="home.html#visit" class="menu__link">Контакты</a></li>
+							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
 					</nav>
@@ -51,27 +52,39 @@
 
 							<div class="esthetic__block esthetic__block--line">
 								<h2 class="esthetic__subtitle">Чистки</h2>
-								<p class="esthetic__text">Это комплексный подход к улучшению состояния кожи, направленный на решение целого
-									ряда проблем. Чистка лица результативно избавляет от ороговевших частиц эпидермиса, тщательно очищает и
+								<p class="esthetic__text">Это комплексный подход к улучшению состояния кожи, направленный на решение
+									целого
+									ряда проблем. Чистка лица результативно избавляет от ороговевших частиц эпидермиса, тщательно очищает
+									и
 									насыщает кожу полезными веществами, минимизирует размер пор и их загрязнение, способствует осветлению
-									пигментации, уменьшает проявления акне и следы от них. В отличие от домашнего ухода,профессиональная чистка
-									обеспечивает доступ к порам на более глубоком уровне,обеспечивая максимально эффективный результат. После
-									чистки кожа выглядит заметно чище,свежее и здоровее. Сужаются поры,уменьшается воспаление, улучшается цвет
-									лица.  Регулярная чистка (1-2 раза в месяц)  предотвращает появление акне,замедляет процессы старения и
+									пигментации, уменьшает проявления акне и следы от них. В отличие от домашнего ухода,профессиональная
+									чистка
+									обеспечивает доступ к порам на более глубоком уровне,обеспечивая максимально эффективный результат.
+									После
+									чистки кожа выглядит заметно чище,свежее и здоровее. Сужаются поры,уменьшается воспаление, улучшается
+									цвет
+									лица.  Регулярная чистка (1-2 раза в месяц)  предотвращает появление акне,замедляет процессы старения
+									и
 									позволяет поддерживать кожу в отличном состоянии.</p>
 							</div>
 
 							<div class="esthetic__block esthetic__block--line">
 								<h2 class="esthetic__subtitle">Пилинги</h2>
-								<p class="esthetic__text">Пилинг – это процедура,направленная на отшелушивание верхних слоёв эпидермиса. В
+								<p class="esthetic__text">Пилинг – это процедура,направленная на отшелушивание верхних слоёв эпидермиса.
+									В
 									отличие от чистки,пилинг воздействует на более глубокие слои кожи, стимулируя процессы регенерации и
-									обновления клеток.  Он эффективен в борьбе с возрастными изменениями, пигментацией,несовершенствами текстуры
-									кожи и рубцами. Процедура проводится с использованием профессиональных средств от австралийского бренда
-									Ultraceuticals, что обеспечивает видимый результат уже после первых процедур. В состав таких средств входят
+									обновления клеток.  Он эффективен в борьбе с возрастными изменениями, пигментацией,несовершенствами
+									текстуры
+									кожи и рубцами. Процедура проводится с использованием профессиональных средств от австралийского
+									бренда
+									Ultraceuticals, что обеспечивает видимый результат уже после первых процедур. В состав таких средств
+									входят
 									высококонцентрированные активные компоненты, подобранные  для решения конкретных проблем кожи.
-									Например,пилинги с ретинолом стимулируют клеточное обновление, уменьшают морщины и пигментацию, а пилинги с
+									Например,пилинги с ретинолом стимулируют клеточное обновление, уменьшают морщины и пигментацию, а
+									пилинги с
 									AHA-кислотами  осветляют кожу и выравнивают её тон.  Важно отметить, что выбор типа пилинга и его
-									концентрации определяется нашим специалистом индивидуально для каждого клиента, с учетом типа кожи и ее
+									концентрации определяется нашим специалистом индивидуально для каждого клиента, с учетом типа кожи и
+									ее
 									состояния. </p>
 							</div>
 
@@ -86,10 +99,13 @@
 						<div class="esthetic__content">
 							<div class="esthetic__block esthetic__block--line">
 								<h2 class="esthetic__subtitle">Уходы</h2>
-								<p class="esthetic__text">В нашем салоне Вы можете воспользоваться широким спектром процедур по уходу за кожей
-									лица, направленных на борьбу с возрастными изменениями, устранение видимых недостатков и общее оздоровление
+								<p class="esthetic__text">В нашем салоне Вы можете воспользоваться широким спектром процедур по уходу за
+									кожей
+									лица, направленных на борьбу с возрастными изменениями, устранение видимых недостатков и общее
+									оздоровление
 									кожи.
-									Исходя из индивидуальных потребностей, возрастных характеристик и особенностей тела и лица клиентов наши
+									Исходя из индивидуальных потребностей, возрастных характеристик и особенностей тела и лица клиентов
+									наши
 									специалисты разрабатывают персонализированную программу ухода для наших клиентов.</p>
 							</div>
 
@@ -118,7 +134,7 @@
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
-								<a href="home.html#expert" class="footer__menu-link">О нас</a>
+								<a href="index.html#expert" class="footer__menu-link">О нас</a>
 							</li>
 							<li class="footer__menu-item">
 								<a href="hardware.html" class="footer__menu-link">Аппаратная косметология</a>
@@ -136,7 +152,7 @@
 								<a href="certificate.html" class="footer__menu-link">Подарочный сертификат</a>
 							</li>
 							<li class="footer__menu-item">
-								<a data-goto-header data-goto=".visit" href="#" class="footer__menu-link">Контакты</a>
+								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
 
@@ -148,7 +164,8 @@
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
