--- a/esthetic.html
+++ b/esthetic.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250324203400">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,10 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="" class="menu__info-link">+7 901 188-81-81</a>
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+								+7 901 188-81-81
+							</a>
+
 						</div>
 						<ul class="menu__list">
 							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
@@ -34,19 +37,21 @@
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
+
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
+
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main class="page">
-			<section class="esthetic">
+			<section id="esthetic" class="esthetic">
 				<div class="esthetic__container">
 					<!-- Первый блок: картинка слева, текст справа -->
 					<h1 class="esthetic__title">Эстетическая косметология</h1>
 					<div class="esthetic__row esthetic__row--one">
 						<div class="esthetic__image">
-							<img src="img/esthetic/esthetic1.webp" alt="Инъекция" />
+							<img src="img/esthetic/esthetic1.png" alt="Инъекция" />
 						</div>
 						<div class="esthetic__content">
 
@@ -94,7 +99,7 @@
 					<!-- Второй блок: картинка слева, текст справа -->
 					<div class="esthetic__row esthetic__row--two">
 						<div class="esthetic__image">
-							<img src="img/esthetic/esthetic2.webp" alt="Процедура" />
+							<img src="img/esthetic/esthetic2.png" alt="Процедура" />
 						</div>
 						<div class="esthetic__content">
 							<div class="esthetic__block esthetic__block--line">
@@ -126,11 +131,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__content">
-					<!-- Лого -->
 					<a href="/" class="footer__logo" aria-label="BeautySmass logo"></a>
-
-
-					<!-- Меню -->
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
@@ -155,10 +156,7 @@
 								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
-
 					</nav>
-
-					<!-- Кнопка -->
 					<div class="footer__button-wrapper">
 						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
 							<button type="button" class="footer__button">
@@ -179,7 +177,7 @@
 
 
 	</div>
-	<script src="js/app.min.js?_v=20250324203400"></script>
+	<script src="js/app.min.js?_v=20250325215750"></script>
 </body>
 
 </html>
