--- a/certificate.html
+++ b/certificate.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250324203400">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,10 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="" class="menu__info-link">+7 901 188-81-81</a>
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+								+7 901 188-81-81
+							</a>
+
 						</div>
 						<ul class="menu__list">
 							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
@@ -34,23 +37,25 @@
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
+
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
+
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main class="page">
-			<section class="giftcard">
+			<section id="giftcard" class="giftcard">
 				<div class="giftcard__container">
 					<h2 class="giftcard__title">Подарочный сертификат</h2>
 
 					<div class="giftcard__card-wrapper">
 						<div class="giftcard__card--main">
-							<img src="img/certificate/giftcard1.webp" loading="eager" alt="Сертификат чехол"
+							<img src="img/certificate/giftcard1.png" loading="eager" alt="Сертификат чехол"
 								class="giftcard__sleeve-img" />
 						</div>
 						<div class="giftcard__card" id="giftCard">
-							<img src="img/certificate/giftcard2.webp" alt="Сертификат карта" />
+							<img src="img/certificate/giftcard2.png" alt="Сертификат карта" />
 						</div>
 					</div>
 
@@ -59,9 +64,16 @@
 					</p>
 
 					<div class="giftcard__options">
-						<button class="giftcard__button">15 000 ₽</button>
-						<button class="giftcard__button">30 000 ₽</button>
-						<button class="giftcard__button">50 000 ₽</button>
+						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
+							<button class="giftcard__button">15 000 ₽</button>
+						</a>
+						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
+							<button class="giftcard__button">30 000 ₽</button>
+						</a>
+						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
+							<button class="giftcard__button">50 000 ₽</button>
+						</a>
+
 					</div>
 				</div>
 			</section>
@@ -69,11 +81,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__content">
-					<!-- Лого -->
 					<a href="/" class="footer__logo" aria-label="BeautySmass logo"></a>
-
-
-					<!-- Меню -->
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
@@ -98,10 +106,7 @@
 								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
-
 					</nav>
-
-					<!-- Кнопка -->
 					<div class="footer__button-wrapper">
 						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
 							<button type="button" class="footer__button">
@@ -120,7 +125,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250324203400"></script>
+	<script src="js/app.min.js?_v=20250325215750"></script>
 </body>
 
 </html>
