--- a/hardware.html
+++ b/hardware.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250324203400">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,10 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="" class="menu__info-link">+7 901 188-81-81</a>
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+								+7 901 188-81-81
+							</a>
+
 						</div>
 						<ul class="menu__list">
 							<li class="menu__item"><a href="index.html#expert" class="menu__link">О нас</a></li>
@@ -34,20 +37,22 @@
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
+
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
+
 					</nav>
 				</div>
 			</div>
 		</header>
 		<main class="page">
-			<section class="hardware">
+			<section id="hardware" class="hardware">
 				<div class="hardware__container">
 					<h1 class="hardware__title">Аппаратная косметология</h1>
 
 					<div class="hardware__list">
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware.webp" alt="SMAS-лифтинг" class="hardware__image">
+							<img src="img/hardware/hardware.jpg" alt="SMAS-лифтинг" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Ультразвуковой SMAS-лифтинг</h2>
 								<p class="hardware__text">Ультразвуковой SMAS-лифтинг с использованием аппарата ULTRAFORMER МРТ — это
@@ -60,7 +65,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware2.webp
+							<img src="img/hardware/hardware2.jpg
         " alt="VOLUMEWER" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Монополярный RF-лифтинг  VOLNEWMER</h2>
@@ -74,7 +79,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware3.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware3.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">VIRTUE - Мультиимпульсный игольчатый RF-лифтинг</h2>
 								<p class="hardware__text">В мире современной косметологии RF-лифтинг — это популярный способ омоложения
@@ -91,7 +96,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware4.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware4.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Harmony XL</h2>
 								<p class="hardware__text">Harmony XL — это современное устройство в области лазерной косметологии,
@@ -107,7 +112,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware5.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware5.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Soprano Titanium</h2>
 								<p class="hardware__text">Soprano Titanium — это высокотехнологичная лазерная платформа, обеспечивающая
@@ -122,7 +127,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware6.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware6.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">HYDRAFACIAL</h2>
 								<p class="hardware__text">Гидрафациальная терапия представляет собой уникальный трехступенчатый процесс,
@@ -135,7 +140,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware7.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware7.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Heleo4</h2>
 								<p class="hardware__text">Методика Heleo4 — это инновационный подход, разработанный российскими
@@ -151,7 +156,7 @@
 						</div>
 
 						<div class="hardware__item">
-							<img src="img/hardware/hardware8.webp" alt="Virtue RF" class="hardware__image">
+							<img src="img/hardware/hardware8.jpg" alt="Virtue RF" class="hardware__image">
 							<div class="hardware__content">
 								<h2 class="hardware__subtitle">Skinova Pro</h2>
 								<p class="hardware__text">Skinova Pro – не просто технология, а новый стандарт
@@ -180,11 +185,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__content">
-					<!-- Лого -->
 					<a href="/" class="footer__logo" aria-label="BeautySmass logo"></a>
-
-
-					<!-- Меню -->
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
@@ -209,10 +210,7 @@
 								<a href="index.html#visit" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
-
 					</nav>
-
-					<!-- Кнопка -->
 					<div class="footer__button-wrapper">
 						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
 							<button type="button" class="footer__button">
@@ -233,7 +231,7 @@
 
 
 	</div>
-	<script src="js/app.min.js?_v=20250324203400"></script>
+	<script src="js/app.min.js?_v=20250325215750"></script>
 </body>
 
 </html>
