--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250324203400">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
 
 
 <body>
-	<div class="wrapper">
+	<div data-fp class="wrapper">
 		<header class="header">
 			<div class="header__container">
 				<div class="header__menu menu">
@@ -22,19 +22,23 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="" class="menu__info-link">+7 901 188-81-81</a>
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+								+7 901 188-81-81
+							</a>
+
 						</div>
 						<ul class="menu__list">
 							<li class="menu__item"><a data-goto="#expert" href="#" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
-							</li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
 							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a data-goto="#visit" href="#" class="menu__link">Контакты</a></li>
 						</ul>
+
 						<button type="button" class="menu__icon icon-menu"><span></span></button>
+
 					</nav>
 				</div>
 			</div>
@@ -49,8 +53,7 @@
 								<span class="hero__button-text">Записаться на консультацию</span>
 								<span class="hero__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
-											stroke-linecap="square" />
+										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
@@ -68,8 +71,7 @@
 							<h2 class="advantages__title">Авторская косметология в самом сердце Москвы</h2>
 						</div>
 						<div class="advantages__img-block">
-							<img class="advantages__img" src="img/advantages/advantages.webp"
-								alt="Авторская косметология в самом сердце Москвы">
+							<img class="advantages__img" src="img/advantages/advantages.png" alt="Авторская косметология в самом сердце Москвы">
 						</div>
 						<div class="advantages__text-block">Где здоровье и красота становятся вашими постоянными спутниками</div>
 					</div>
@@ -82,18 +84,18 @@
 						<div class="about__product">
 
 							<a href="hardware.html" class="about__product-block">
-								<img src="img/about/about1.webp" alt="Аппаратная косметология" class="about__product-img">
+								<img src="img/about/about1.png" alt="Аппаратная косметология" class="about__product-img">
 								<div class="about__product-text">Аппаратная косметология</div>
 							</a>
 
 							<a href="beauty-injections.html" class="about__product-block">
-								<img src="img/about/about2.webp" alt="Инъекционная косметология" class="about__product-img">
+								<img src="img/about/about2.png" alt="Инъекционная косметология" class="about__product-img">
 								<div class="about__product-text">Инъекционная косметология</div>
 							</a>
 
 							<a href="esthetic.html" class="about__product-block">
 								<div class="about__img-div">
-									<img src="img/about/about3.webp" alt="Эстетическая косметология" class="about__product-img">
+									<img src="img/about/about3.png" alt="Эстетическая косметология" class="about__product-img">
 								</div>
 								<div class="about__product-text">Эстетическая косметология</div>
 							</a>
@@ -105,8 +107,7 @@
 								<span class="about__button-text">ПРАЙС-ЛИСТ</span>
 								<span class="about__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="27" height="26" viewBox="0 0 27 26" fill="none">
-										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417"
-											stroke-linecap="square" />
+										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M3.75 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M23.25 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
@@ -177,12 +178,11 @@
 				<div class="philosophy__container">
 					<div class="philosophy__content">
 						<div class="philosophy__image philosophy__image--left">
-							<img src="img/philosophy/philosophy1.webp" alt="Интерьер салона">
+							<img src="img/philosophy/philosophy1.png" alt="Интерьер салона">
 						</div>
 						<div class="philosophy__text-block">
 							<p class="philosophy__description">
-								Салон Beauty Smas — это сочетание роскоши и профессионального подхода. Косметологический центр класса
-								люкс,
+								Салон Beauty Smas — это сочетание роскоши и профессионального подхода. Косметологический центр класса люкс,
 								эксклюзивные процедуры и самое современное оборудование, расположенные в самом сердце столицы.
 							</p>
 							<ul class="philosophy__features">
@@ -192,11 +192,11 @@
 							</ul>
 						</div>
 						<div class="philosophy__image philosophy__image--right">
-							<img src="img/philosophy/philosophy2.webp" alt="Процедура в салоне">
+							<img src="img/philosophy/philosophy2.png" alt="Процедура в салоне">
 						</div>
 					</div>
 					<div class="philosophy__footer-image">
-						<img src="img/philosophy/philosophy3.webp" alt="Салон Beauty Smas">
+						<img src="img/philosophy/philosophy3.png" alt="Салон Beauty Smas">
 					</div>
 				</div>
 			</section>
@@ -211,8 +211,7 @@
 							<span class="gift__button-text">Купить сертификат</span>
 							<span class="gift__button-img">
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
-										stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
@@ -253,9 +252,7 @@
 				</div>
 
 				<div class="visit__map">
-					<iframe
-						src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва"
-						width="100%" height="400" frameborder="0" allowfullscreen>
+					<iframe src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва" width="100%" height="400" frameborder="0" allowfullscreen>
 					</iframe>
 				</div>
 			</section>
@@ -263,11 +260,7 @@
 		<footer class="footer">
 			<div class="footer__container">
 				<div class="footer__content">
-					<!-- Лого -->
 					<a href="/" class="footer__logo" aria-label="BeautySmass logo"></a>
-
-
-					<!-- Меню -->
 					<nav class="footer__nav">
 						<ul class="footer__menu">
 							<li class="footer__menu-item">
@@ -292,17 +285,13 @@
 								<a data-goto="#visit" href="#" class="footer__menu-link">Контакты</a>
 							</li>
 						</ul>
-
 					</nav>
-
-					<!-- Кнопка -->
 					<div class="footer__button-wrapper">
 						<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer">
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
-										stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
@@ -317,7 +306,7 @@
 		</div>
 
 	</div>
-	<script src="js/app.min.js?_v=20250324203400"></script>
+	<script src="js/app.min.js?_v=20250325215750"></script>
 </body>
 
 </html>
