--- a/certificate.html
+++ b/certificate.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250327171341">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,8 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer"
+								class="menu__info-link style__number">
 								+7 901 188-81-81
 							</a>
 
@@ -33,7 +34,8 @@
 							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
 							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
+							<li class="menu__item"><a href="../files/price.pdf" target="_blank" rel="noopener noreferrer"
+									class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a href="index.html#visit" class="menu__link">Контакты</a></li>
 						</ul>
@@ -97,7 +99,10 @@
 								<a href="esthetic.html" class="footer__menu-link">Эстетическая косметология</a>
 							</li>
 							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">Прайс</a>
+								<a href="../files/price.pdf" target="_blank" rel="noopener noreferrer" class="footer__menu-link">
+									Прайс
+								</a>
+
 							</li>
 							<li class="footer__menu-item">
 								<a href="certificate.html" class="footer__menu-link">Подарочный сертификат</a>
@@ -125,7 +130,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20250325215750"></script>
+	<script src="js/app.min.js?_v=20250327171341"></script>
 </body>
 
 </html>
