--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no">
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20250325215750">
+	<link rel="stylesheet" href="css/style.min.css?_v=20250327171341">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,8 @@
 					<nav class="menu__body">
 						<div class="menu__info">
 							<a href="certificate.html" class="menu__info-link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a>
-							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer" class="menu__info-link">
+							<a href="https://wa.link/r9l1kg" target="_blank" rel="noopener noreferrer"
+								class="menu__info-link style__number">
 								+7 901 188-81-81
 							</a>
 
@@ -30,9 +31,11 @@
 						<ul class="menu__list">
 							<li class="menu__item"><a data-goto="#expert" href="#" class="menu__link">О нас</a></li>
 							<li class="menu__item"><a href="hardware.html" class="menu__link">АППАРАТНАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a></li>
+							<li class="menu__item"><a href="beauty-injections.html" class="menu__link">ИНЪЕКЦИОННАЯ КОСМЕТОЛОГИЯ</a>
+							</li>
 							<li class="menu__item"><a href="esthetic.html" class="menu__link">ЭСТЕТИЧЕСКАЯ КОСМЕТОЛОГИЯ</a></li>
-							<li class="menu__item"><a href="#" class="menu__link">ПРАЙС</a></li>
+							<li class="menu__item"><a href="../files/price.pdf" target="_blank" rel="noopener noreferrer"
+									class="menu__link">ПРАЙС</a></li>
 							<li class="menu__item"><a href="certificate.html" class="menu__link">ПОДАРОЧНЫЙ СЕРТИФИКАТ</a></li>
 							<li class="menu__item"><a data-goto="#visit" href="#" class="menu__link">Контакты</a></li>
 						</ul>
@@ -53,7 +56,8 @@
 								<span class="hero__button-text">Записаться на консультацию</span>
 								<span class="hero__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+										<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+											stroke-linecap="square" />
 										<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
@@ -71,7 +75,8 @@
 							<h2 class="advantages__title">Авторская косметология в самом сердце Москвы</h2>
 						</div>
 						<div class="advantages__img-block">
-							<img class="advantages__img" src="img/advantages/advantages.png" alt="Авторская косметология в самом сердце Москвы">
+							<img class="advantages__img" src="img/advantages/advantages.png"
+								alt="Авторская косметология в самом сердце Москвы">
 						</div>
 						<div class="advantages__text-block">Где здоровье и красота становятся вашими постоянными спутниками</div>
 					</div>
@@ -103,16 +108,18 @@
 						</div>
 
 						<div class="about__price">
-							<button type="button" class="about__button-btn">
+							<a href="../files/price.pdf" target="_blank" class="about__button-btn">
 								<span class="about__button-text">ПРАЙС-ЛИСТ</span>
 								<span class="about__button-img">
 									<svg xmlns="http://www.w3.org/2000/svg" width="27" height="26" viewBox="0 0 27 26" fill="none">
-										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
+										<path d="M16.75 19.5L23.25 13L16.75 6.5" stroke="#5B5B5B" stroke-width="1.35417"
+											stroke-linecap="square" />
 										<path d="M3.75 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="square" />
 										<path d="M23.25 13H22.1667" stroke="#5B5B5B" stroke-width="1.35417" stroke-linecap="round" />
 									</svg>
 								</span>
-							</button>
+							</a>
+
 						</div>
 
 					</div>
@@ -171,7 +178,7 @@
 			<section id="services" class="services">
 				<div class="services__container">
 					<h2 class="services__title">Погружение в атмосферу
-						Beauty Smass</h2>
+						BeautySmass</h2>
 				</div>
 			</section>
 			<section id="philosophy" class="philosophy">
@@ -182,7 +189,8 @@
 						</div>
 						<div class="philosophy__text-block">
 							<p class="philosophy__description">
-								Салон Beauty Smas — это сочетание роскоши и профессионального подхода. Косметологический центр класса люкс,
+								Салон BeautySmass — это сочетание роскоши и профессионального подхода. Косметологический центр класса
+								люкс,
 								эксклюзивные процедуры и самое современное оборудование, расположенные в самом сердце столицы.
 							</p>
 							<ul class="philosophy__features">
@@ -195,7 +203,7 @@
 							<img src="img/philosophy/philosophy2.png" alt="Процедура в салоне">
 						</div>
 					</div>
-					<div class="philosophy__footer-image">
+					<div class="philosophy__footer-image philosophy__image--bottom">
 						<img src="img/philosophy/philosophy3.png" alt="Салон Beauty Smas">
 					</div>
 				</div>
@@ -205,13 +213,14 @@
 					<div class="gift__content">
 						<h2 class="gift__title">Подарите роскошь и заботу</h2>
 						<p class="gift__text">
-							Подарочные сертификаты Beauty Smas — идеальный выбор для ваших близких
+							Подарочные сертификаты BeautySmass — идеальный выбор для ваших близких
 						</p>
 						<a href="certificate.html" class="gift__button">
 							<span class="gift__button-text">Купить сертификат</span>
 							<span class="gift__button-img">
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
@@ -223,7 +232,7 @@
 			</section>
 			<section id="visit" class="visit">
 				<div class="visit__container">
-					<h2 class="visit__title">ЖДЁМ ВАС В BEAUTY SMASS</h2>
+					<h2 class="visit__title">ЖДЁМ ВАС В BEAUTYSMASS</h2>
 
 					<div class="visit__info">
 						<p class="visit__address-title">Адрес:</p>
@@ -231,8 +240,8 @@
 						<p class="visit__schedule">с 10:00 до 20:00 БЕЗ ВЫХОДНЫХ</p>
 
 						<div class="visit__phones">
-							<a href="tel:+79011888181" class="visit__phone">+7 901 188-81-81</a>
-							<a href="tel:+79011888118" class="visit__phone">+7 901 188-81-18</a>
+							<a href="tel:+79011888181" class="visit__phone style__number">+7 901 188-81-81</a>
+							<a href="tel:+79011888118" class="visit__phone style__number">+7 901 188-81-18</a>
 						</div>
 
 						<div class="visit__social">
@@ -252,7 +261,9 @@
 				</div>
 
 				<div class="visit__map">
-					<iframe src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва" width="100%" height="400" frameborder="0" allowfullscreen>
+					<iframe
+						src="https://yandex.ru/map-widget/v1/?ll=37.644962%2C55.746332&z=16&text=Раушская%20набережная%204%2F5с1%2C%20Москва"
+						width="100%" height="400" frameborder="0" allowfullscreen>
 					</iframe>
 				</div>
 			</section>
@@ -276,7 +287,10 @@
 								<a href="esthetic.html" class="footer__menu-link">Эстетическая косметология</a>
 							</li>
 							<li class="footer__menu-item">
-								<a href="#" class="footer__menu-link">Прайс</a>
+								<a href="../files/price.pdf" target="_blank" rel="noopener noreferrer" class="footer__menu-link">
+									Прайс
+								</a>
+
 							</li>
 							<li class="footer__menu-item">
 								<a href="certificate.html" class="footer__menu-link">Подарочный сертификат</a>
@@ -291,7 +305,8 @@
 							<button type="button" class="footer__button">
 								<span>Записаться на консультацию</span>
 								<svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
+									<path d="M16.25 19.5L22.75 13L16.25 6.5" stroke="#171717" stroke-width="1.35417"
+										stroke-linecap="square" />
 									<path d="M3.25 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="square" />
 									<path d="M22.75 13H21.6667" stroke="#171717" stroke-width="1.35417" stroke-linecap="round" />
 								</svg>
@@ -302,11 +317,77 @@
 				</div>
 			</div>
 		</footer>
-		<div id="visit" class="fullpage">
-		</div>
 
 	</div>
-	<script src="js/app.min.js?_v=20250325215750"></script>
+	<div id="fls-preloader">
+
+		<script>
+			function preloader() {
+				const preloaderContainer = document.querySelector('#fls-preloader');
+
+				const style = `
+			<style>
+				.fls-preloader {
+					position: fixed;
+					inset: 0;
+					background-color: #fff;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+					z-index: 9999;
+					pointer-events: none;
+				}
+				.fls-preloader__logo {
+					width: 310px;
+					height: auto;
+					animation: blink 1.2s infinite ease-in-out;
+				}
+				@keyframes blink {
+					0%, 100% { opacity: 1; }
+					50% { opacity: 0.2; }
+				}
+				.lock body {
+					overflow: hidden;
+					touch-action: none;
+				}
+				.loading body > *:not(#fls-preloader) {
+					opacity: 0;
+					visibility: hidden;
+				}
+				.loaded body > *:not(#fls-preloader) {
+					transition: opacity 0.5s ease;
+					opacity: 1;
+					visibility: visible;
+				}
+			</style>`;
+
+				document.head.insertAdjacentHTML("beforeend", style);
+
+				const html = `
+			<div class="fls-preloader">
+				<img src="img/logo-footer.svg" alt="Логотип" class="fls-preloader__logo" />
+			</div>`;
+
+				preloaderContainer.insertAdjacentHTML("beforeend", html);
+
+				const htmlDoc = document.documentElement;
+				htmlDoc.classList.add("loading", "lock");
+
+				window.addEventListener("load", () => {
+					setTimeout(() => {
+						htmlDoc.classList.remove("loading", "lock");
+						htmlDoc.classList.add("loaded");
+						const preloader = document.querySelector(".fls-preloader");
+						preloader?.remove();
+						preloaderContainer?.remove();
+					}, 300);
+				});
+			}
+			preloader();
+		</script>
+
+	</div>
+	<script src="js/app.min.js?_v=20250327171341"></script>
 </body>
 
 </html>
